# nbi-oedi-etl-v2

./: .gitignore  README.md  cdk.json  config copy.json  config.sample.json  package-lock.json  package.json
etl/: .pylintrc  README.md  build_wheel.py  pyproject.toml  pytest.ini  runner.py  setup.py
etl/glue-entry/: glue_job.py
etl/oedi_etl/: indexer.py  log.py  main.py  manager.py  tracker.py  utils.py  worker.py
etl/tests/: test_etl_integration.py
lib/: nbi-open-data-analytics-stack.ts
scripts/: build-etl.d.ts  build-etl.js  config.d.ts  config.js  deploy.js  run-glue-workflow.js
sql/: saved-queries.sql
test/: nbi-open-data-analytics.test.ts
